--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1,58 +1,85 @@
 ar:
-  date:
-    abbr_day_names:
-    - الأحد
-    - الإثنين
-    - الثلاثاء
-    - الأربعاء
-    - الخميس
-    - الجمعة
-    - السبت
-    abbr_month_names:
-    - 
-    - يناير
-    - فبراير
-    - مارس
-    - ابريل
-    - مايو
-    - يونيو
-    - يوليو
-    - اغسطس
-    - سبتمبر
-    - اكتوبر
-    - نوفمبر
-    - ديسمبر
-    day_names:
-    - الأحد
-    - الإثنين
-    - الثلاثاء
-    - الأربعاء
-    - الخميس
-    - الجمعة
-    - السبت
-    formats:
-      default: ! '%Y-%m-%d'
-      long: ! '%B %e, %Y'
-      short: ! '%e %b'
-    month_names:
-    - 
-    - يناير
-    - فبراير
-    - مارس
-    - ابريل
-    - مايو
-    - يونيو
-    - يوليو
-    - اغسطس
-    - سبتمبر
-    - اكتوبر
-    - نوفمبر
-    - ديسمبر
-    order:
-    - :day
-    - :month
-    - :year
-  datetime:
+active_admin:
+    dashboard: Dashboard
+    dashboard_welcome:
+      welcome: "Welcome to Active Admin. This is the default dashboard page."
+      call_to_action: "To add dashboard sections, checkout 'app/admin/dashboards.rb'"
+    view: "View"
+    edit: "Edit"
+    delete: "Delete"
+    delete_confirmation: "Are you sure you want to delete this?"
+    new_model: "New %{model}"
+    create_model: "New %{model}"
+    edit_model: "Edit %{model}"
+    update_model: "Edit %{model}"
+    delete_model: "Delete %{model}"
+    details: "%{model} Details"
+    cancel: "Cancel"
+    empty: "Empty"
+    previous: "Previous"
+    next: "Next"
+    download: "Download:"
+    has_many_new: "Add New %{model}"
+    has_many_delete: "Delete"
+    filter: "Filter"
+    clear_filters: "Clear Filters"
+    search_field: "Search %{field}"
+    equal_to: "Equal To"
+    greater_than: "Greater Than"
+    less_than: "Less Than"
+    main_content: "Please implement %{model}#main_content to display content."
+    logout: "Logout"
+    sidebars:
+      filters: "Filters"
+    pagination:
+      empty: "No %{model} found"
+      one: "Displaying <b>1</b> %{model}"
+      one_page: "Displaying <b>all %{n}</b> %{model}"
+      multiple: "Displaying %{model} <b>%{from}&nbsp;-&nbsp;%{to}</b> of <b>%{total}</b> in total"
+      entry:
+        one: "entry"
+        other: "entries"
+    any: "Any"
+    blank_slate:
+      content: "There are no %{resource_name} yet."
+      link: "Create one"
+    batch_actions:
+      button_label: "Batch Actions"
+      delete_confirmation: "Are you sure you want to delete these %{plural_model}? You won't be able to undo this."
+      succesfully_destroyed:
+        one: "Successfully destroyed 1 %{model}"
+        other: "Successfully destroyed %{count} %{plural_model}"
+      selection_toggle_explanation: "(Toggle Selection)"
+      link: "Create one"
+      action_label: "%{title} Selected"
+      labels:
+        destroy: "Delete"
+    comments:
+      body: "Body"
+      author: "Author"
+      title: "Comment"
+      add: "Add Comment"
+      resource: "Resource"
+      no_comments_yet: "No comments yet."
+      title_content: "Comments (%{count})"
+      errors:
+        empty_text: "Comment wasn't saved, text was empty."
+    devise:
+      login:
+        title: "Login"
+        remember_me: "Remember me"
+        submit: "Login"
+      reset_password:
+        title: "Forgot your password?"
+        submit: "Reset My Password"
+      change_password:
+        title: "Change your password"
+        submit: "Change my password"
+      links:
+        sign_in: "Sign in"
+        forgot_your_password: "Forgot your password?"
+
+datetime:
     distance_in_words:
       about_x_hours:
         one: حوالي ساعة واحدة
@@ -95,7 +122,8 @@ ar:
       month: الشهر
       second: ثانية
       year: السنة
-  errors: &errors
+
+errors: &errors
     format: ! '%{attribute} %{message}'
     messages:
       accepted: يجب أن تقبل
@@ -124,14 +152,14 @@ ar:
       header:
         one: ! 'ليس بالامكان حفظ %{model}: خطأ واحد.'
         other: ! 'ليس بالامكان حفظ %{model}: %{count} أخطاء.'
-  helpers:
+helpers:
     select:
       prompt: الرجاء اختيار
     submit:
       create: ! '%{model} إنشاء'
       submit: ! '%{model} حفظ'
       update: ! '%{model} نموذج'
-  number:
+number:
     currency:
       format:
         delimiter: ! ','
@@ -141,13 +169,13 @@ ar:
         significant: false
         strip_insignificant_zeros: false
         unit: $
-    format:
+format:
       delimiter: ! ','
       precision: 3
       separator: .
       significant: false
       strip_insignificant_zeros: false
-    human:
+human:
       decimal_units:
         format: ! '%n %u'
         units:
@@ -157,12 +185,12 @@ ar:
           thousand: ألف
           trillion: تريليون
           unit: ''
-      format:
+format:
         delimiter: ''
         precision: 3
         significant: true
         strip_insignificant_zeros: true
-      storage_units:
+storage_units:
         format: ! '%n %u'
         units:
           byte:
@@ -172,28 +200,21 @@ ar:
           kb: KB
           mb: MB
           tb: TB
-    percentage:
+percentage:
       format:
         delimiter: ''
-    precision:
+precision:
       format:
         delimiter: ''
-  support:
+support:
     array:
       last_word_connector: ! ', و '
       two_words_connector: ! ' و '
       words_connector: ! ', '
-  time:
+time:
     am: صباحا
     formats:
       default: ! '%a %b %d %H:%M:%S %Z %Y'
       long: ! '%B %d, %Y %H:%M'
       short: ! '%d %b %H:%M'
     pm: مساءا
-  # remove these aliases after 'activemodel' and 'activerecord' namespaces are removed from Rails repository
-  activemodel:
-    errors:
-      <<: *errors
-  activerecord:
-    errors:
-      <<: *errors
